--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,17 +4,14 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 100vh;
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
   color: white;
   padding: 0 16px;
   box-sizing: border-box;
+  position: relative;
   overflow: hidden;
 }
 
