--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,7 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
@@ -12,6 +12,7 @@
   padding: 0 16px;
   box-sizing: border-box;
   position: relative;
+  overflow: hidden;
 }
 
 /* ── Sparks Background ── */
@@ -1502,6 +1503,6 @@
 
 @media (orientation: landscape) and (hover: none) {
   .home-container {
-    min-height: auto;
+    height: 100%;
   }
 }
