--- a/src/components/StatsPage.css
+++ b/src/components/StatsPage.css
@@ -7,7 +7,7 @@
 
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
