--- a/src/components/Stopwatch.css
+++ b/src/components/Stopwatch.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: calc(100vh - 100px);
+  min-height: calc(100% - 100px);
   padding: 20px;
   padding-bottom: 160px;
   background: #000000;
@@ -207,7 +207,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 100%;
   padding: 40px;
   margin-top: -20vh;
 }
