--- a/src/components/TabBar.css
+++ b/src/components/TabBar.css
@@ -110,7 +110,9 @@
 /* Add bottom padding to main content to account for tab bar */
 .tab-content {
   padding-bottom: 100px;
-  min-height: 100vh;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 /* Desktop content layout - centered with invisible right bar */
@@ -547,7 +549,7 @@
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
-    height: 100vh !important;
+    height: 100% !important;
     margin: 0 !important;
     padding: 0 !important;
   }
