--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
-html, body {
+html {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   height: 100%;
+  overflow: hidden;
+  background: #000;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  padding-top: env(safe-area-inset-top, 0);
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,7 +20,6 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   background: #000;
   color: #fff;
-  min-height: 100vh;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -18,6 +27,10 @@ html, body {
   -ms-user-select: none;
   user-select: none;
   touch-action: manipulation;
+}
+
+#root, .App {
+  height: 100%;
 }
 
 code {
