--- a/src/components/EditPage.css
+++ b/src/components/EditPage.css
@@ -2,7 +2,7 @@
 .edit-page-container {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: calc(100vh - env(safe-area-inset-top, 0px));
   background: #000000;
   color: white;
   padding: 20px;
