--- a/src/components/ExerciseEditPage.css
+++ b/src/components/ExerciseEditPage.css
@@ -2,7 +2,7 @@
 .exercise-edit-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100vh - env(safe-area-inset-top, 0px));
   background: #000000;
   color: white;
   padding: 20px;
