--- a/src/components/StatsPage.css
+++ b/src/components/StatsPage.css
@@ -7,7 +7,7 @@
 
   position: relative;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - env(safe-area-inset-top, 0px));
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
