--- a/src/components/TabBar.css
+++ b/src/components/TabBar.css
@@ -110,9 +110,6 @@
 /* Add bottom padding to main content to account for tab bar */
 .tab-content {
   padding-bottom: 100px;
-  height: 100%;
-  box-sizing: border-box;
-  overflow: hidden;
 }
 
 /* Desktop content layout - centered with invisible right bar */
@@ -549,7 +546,7 @@
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
-    height: 100% !important;
+    height: calc(100vh - env(safe-area-inset-top, 0px)) !important;
     margin: 0 !important;
     padding: 0 !important;
   }
