--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -8,7 +8,7 @@
   background: #000000;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
   width: 100vw;
-  height: 100%;
+  height: calc(100vh - env(safe-area-inset-top, 0px));
   margin: 0;
   border-radius: 0;
   box-sizing: border-box;
