--- a/src/components/WorkoutList.css
+++ b/src/components/WorkoutList.css
@@ -2,7 +2,7 @@
 .workout-list {
   display: flex;
   flex-direction: column;
-  max-height: 100%;
+  max-height: calc(100vh - env(safe-area-inset-top, 0px));
   overflow-y: scroll;
   padding: 10px;
   padding-bottom: calc(70px + env(safe-area-inset-bottom, 0px));
