--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
+  height: -webkit-fill-available;
   overflow: hidden;
   background: #000;
 }
@@ -11,6 +12,7 @@ body {
   padding: 0;
   padding-top: env(safe-area-inset-top, 0);
   height: 100%;
+  height: -webkit-fill-available;
   overflow: hidden;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
