--- a/src/components/Ring.css
+++ b/src/components/Ring.css
@@ -8,6 +8,7 @@
   flex-shrink: 0 !important;
   min-width: 300px !important;
   min-height: 300px !important;
+  touch-action: none;
 }
 
 .progress-ring {
